--- a/workshop_index.html
+++ b/workshop_index.html
@@ -158,7 +158,9 @@ $(document).ready(function () {
 <pre class="r"><code>install.packages(&quot;data.table&quot;)</code></pre>
 <ul>
 <li>Das Übungsdatenset <a href="datatable_workshop.csv">herunterladen</a> und in das Arbeitsverzeichnis kopieren</li>
+<li>Das Übungsdatenset einlesen</li>
 </ul>
+<pre class="r"><code>dt &lt;- fread(&quot;datatable_workshop.csv&quot;)</code></pre>
 </div>
 <div id="ubungen" class="section level1">
 <h1>Übungen</h1>
